# freedom-e-sdk

./: ATestArty.sh  ATestRevB.sh  Adec.sh  Aenc.sh  Ahash.sh  Arand.sh  Atest.sh  back.scala  board.sh  cmd.sh  commands.txt  env.sh  env2.sh  hello.sh  logcutecom.txt  matmul.sh  recovery  rocc3.sh
Ascon32bits/: ROR32.c  aead.h  main.c  mask.c  round.h  state.h  util.h
Asconref/: aead.c  aead.h  cmd.sh  main.c  main2.c  permutation.c  printstate.h  word.h
bsp/freedom-e310-arty-fpu/: settings.mk
bsp/freedom-e310-arty-xmem/: metal.default.lds
cprograms/: color.c
right_rotation/: main.c
scripts/: upload.dbg
software/AHashClean/: AHashClean.c  aead.h  printf.c
software/AHashCleanHW/: AEAD_HW.h  AHashCleanHW.c  csr.h  round.h  state.h
software/AsconDec/: AsconDec.c  Makefile
software/AsconEnc/: AsconEnc.c
software/AsconHW/: AEAD_HW.h
software/AsconHash/: AsconHash.c
software/AsconHashSW/: AsconHashSW.c
software/AsconRand/: AsconRand.c
software/AsconTest/: AsconTest.c
software/Ascon_Test/: Ascon_Test.c
software/Ascon_TestS/: Ascon_TestS.c
software/Asconref/: Asconref.c  aead.c  aead.h  round.h  util.h
software/E300Ascon/: AEAD_HW.h  E300Ascon.c  aead.c
software/E300RW/: AEAD_HW.h  E300RW.c
software/LCM/: LCM.c
software/MyRoCC/: MyRoCC.c
software/MyRoCC2/: MyRoCC2.c
software/MyRoCC3/: Makefile  MyRoCC3.c
software/RoCCcommon/: csr.h  rocc.h
software/accum/: accum-dump.txt  accum.c
software/accum2/: accum.c
software/asconC/common/: CMakeLists.txt
software/euler/: .gdbinit  Makefile  euler.c
software/flipp/: csr.h  flipp.c
(+91 files in other folders)
